# Robotic-Software

./: README.md
week1/: file_with_a_movie.txt
week10/week10/src/isaac_newton_pkg/: package.xml  setup.cfg  setup.py
week10/week10/src/isaac_newton_pkg/bt_xml/: jakarta.xml
week2/room.py/: Room.py
week3/week3/src/land_rover/: package.xml  setup.cfg  setup.py
week3/week3/src/land_rover/test/: test_land_rover.py
week3/week3/src/minor_requirements/: package.xml  setup.cfg  setup.py
week4/ford/: package.xml  setup.cfg  setup.py
week4/ford/ford/: battery.py
week4/leeds/: CMakeLists.txt  package.xml
week4/transcript/: package.xml  setup.cfg  setup.py
week4/transcript/transcript/: projector.py
week5/src/bristol/: package.xml  setup.cfg  setup.py
week5/src/bristol/bristol/: date.py
week5/src/mitsubishi/: setup.cfg  setup.py
week5/src/mitsubishi/install/: local_setup.sh  setup.ps1  setup.sh
week5/src/mitsubishi/mitsubishi/: suspension.py
week5/src/package_c/: setup.cfg  setup.py
week5/src/package_c/install/: local_setup.sh  setup.bash  setup.zsh
week6/src/budding_yeast_description_pkg/: package.xml  setup.cfg  setup.py
week6/src/budding_yeast_description_pkg/urdf/: michael.urdf
week7/CA8_package_incomplete/: setup.cfg  setup.py
week7/CA8_package_incomplete/launch/: sim_robot.launch.py
week7/CA8_package_incomplete/urdf/: diff_drive.urdf.xacro  example_gazebo.xacro
week9/week9/src/large_munsterlander_pkg/: package.xml  setup.cfg  setup.py
week9/week9/src/large_munsterlander_pkg/config/: antiochia_ad_taurum.yaml  brixia.yaml
(+22 files in other folders)
