<?xml version="1.0"?>
<package format="3">
  <name>package_a</name>
  <version>0.1.0</version>
  <description>Example ROS 2 package for assessment</description>
  <maintainer email="zhangqiuhui24@gmail.com">ZQH</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

