<package format="3">
  <name>large_munsterlander_pkg</name>
  <version>0.0.1</version>
  <description>A ROS2 package for Task 1</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>

